force-app/main/default/objects/Enrichment_Log__c/Enrichment_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log of Amplemarket enrichment API calls.</description>
    <label>Enrichment Log</label>
    <nameField>
        <displayFormat>EL-{0000000}</displayFormat>
        <label>Enrichment Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrichment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>