force-app/main/default/objects/Enrichment_Log__c/fields/Batch_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Request_Id__c</fullName>
    <label>Batch Request Id</label>
    <length>64</length>
    <type>Text</type>
    <description>Amplemarket enrichment_request id for async batch jobs. Null for synchronous single-record calls.</description>
</CustomField>