force-app/main/default/objects/Enrichment_Log__c/fields/Company_Search_Credits__c.field-meta.xml
<CustomField>
    <fullName>Company_Search_Credits__c</fullName>
    <label>Company Search Credits</label>
    <description>Credits consumed by the company (Account) match for this enrichment.</description>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>