force-app/main/default/objects/Enrichment_Log__c/fields/Credits_Used__c.field-meta.xml
<CustomField>
    <fullName>Credits_Used__c</fullName>
    <label>Credits Used</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>