force-app/main/default/objects/Enrichment_Log__c/fields/Email_Reveal_Credits__c.field-meta.xml
<CustomField>
    <fullName>Email_Reveal_Credits__c</fullName>
    <label>Email Reveal Credits</label>
    <description>Credits consumed by revealing an email address for this enrichment.</description>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>