force-app/main/default/objects/Enrichment_Log__c/fields/Person_Search_Credits__c.field-meta.xml
<CustomField>
    <fullName>Person_Search_Credits__c</fullName>
    <label>Person Search Credits</label>
    <description>Credits consumed by the person (Lead/Contact) match for this enrichment.</description>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>