force-app/main/default/objects/Enrichment_Log__c/fields/Phone_Reveal_Credits__c.field-meta.xml
<CustomField>
    <fullName>Phone_Reveal_Credits__c</fullName>
    <label>Phone Reveal Credits</label>
    <description>Credits consumed by revealing phone numbers for this enrichment.</description>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>