force-app/main/default/objects/Enrichment_Log__c/fields/Run_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Run_Timestamp__c</fullName>
    <label>Run Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>